[project]
name = "job-scheduler"
version = "0.1.0"
description = "Background job scheduler with priority queue, DAG workflows, and live UI"
requires-python = ">=3.14"
dependencies = [
    "aiosmtpd>=1.4.6",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "sqlalchemy[asyncio]>=2.0.50",
    "sse-starlette>=3.4.4",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
serve = "app.main:run"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = true
